Added files for reproduction

--- a/demo_nmnist.ipynb
+++ b/demo_nmnist.ipynb
@@ -54,7 +54,11 @@
    },
    "outputs": [],
    "source": [
-    "dstr, dsts = tfds.load(name=\"mnist\", data_dir=\"/data-directory/tensorflow_datasets\", split=[\"train\", \"test\"], batch_size=-1)\n",
+    "dstr, dsts = tfds.load(\n",
+    "    name=\"mnist\", \n",
+    "    data_dir=\"/data-directory/tensorflow_datasets\", # arbitrary\n",
+    "    split=[\"train\", \"test\"], \n",
+    "    batch_size=-1)\n",
     "dstr[\"image\"] = dstr[\"image\"].numpy()\n",
     "dsts[\"image\"] = dsts[\"image\"].numpy()\n",
     "dstr[\"label\"] = dstr[\"label\"].numpy()\n",
